--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-  <link href="css/style.css" rel="stylesheet" />
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="../css/style.css" rel="stylesheet" />
+  <link href="../css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -24,7 +24,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                <img src="images/logo.png" alt="companie's logo" id="logo">
+                <img src="../images/logo.png" alt="companie's logo" id="logo">
               </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
           </div>
           <div class="col-md-6">
             <div class="img-box">
-              <img src="images/slider-img.png" alt="">
+              <img src="../images/slider-img.png" alt="">
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
         </div>
         <div class="col-lg-7 col-md-6">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="../images/about-img.jpg" alt="">
           </div>
         </div>
       </div>
@@ -156,7 +156,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/professional-img.png" alt="">
+            <img src="../images/professional-img.png" alt="">
           </div>
         </div>
         <div class="col-md-6 ">
@@ -190,7 +190,7 @@
         <div class="col-sm-6 col-md-4 mx-auto">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s1.png" alt="" />
+              <img src="../images/s1.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
@@ -206,7 +206,7 @@
         <div class="col-sm-6 col-md-4 mx-auto">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s2.png" alt="" />
+              <img src="../images/s2.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
@@ -222,7 +222,7 @@
         <div class="col-sm-6 col-md-4 mx-auto">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s3.png" alt="" />
+              <img src="../images/s3.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
@@ -258,7 +258,7 @@
             <div class="box">
               <div class="client_id">
                 <div class="img-box">
-                  <img src="images/client-1.jpg" alt="">
+                  <img src="../images/client-1.jpg" alt="">
                 </div>
                 <div class="client_detail">
                   <div class="client_info">
@@ -285,7 +285,7 @@
             <div class="box">
               <div class="client_id">
                 <div class="img-box">
-                  <img src="images/client-2.jpg" alt="">
+                  <img src="../images/client-2.jpg" alt="">
                 </div>
                 <div class="client_detail">
                   <div class="client_info">
@@ -312,7 +312,7 @@
             <div class="box">
               <div class="client_id">
                 <div class="img-box">
-                  <img src="images/client-1.jpg" alt="">
+                  <img src="../images/client-1.jpg" alt="">
                 </div>
                 <div class="client_detail">
                   <div class="client_info">
@@ -339,7 +339,7 @@
             <div class="box">
               <div class="client_id">
                 <div class="img-box">
-                  <img src="images/client-2.jpg" alt="">
+                  <img src="../images/client-2.jpg" alt="">
                 </div>
                 <div class="client_detail">
                   <div class="client_info">
@@ -475,6 +475,7 @@
       </div>
     </div>
   </section>
+  <!-- footer section -->
   <footer class="footer_section">
     <div class="container">
       <p>
